add sidebar TODO: swipe input handler

--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
 </head>
 <body>
   <div id="sidebar" class="open">
-    <div id="sidebar-toggle"></div>
+    <div id="sidebar-list">
+      <!-- Slide thumbnails will be dynamically inserted here -->
+    </div>
   </div>
   <div id="main-content">
+    <div id="sidebar-toggle" title="Show/hide navigation sidebar (])"></div>
     <div id="slide-nav">
-      <div id="prev-arrow" class="slide-nav-arrow">
+      <div id="prev-arrow" class="slide-nav-arrow" title="Previous Slide (&#8592;)">
         <span>&lt;</span>
       </div>
-      <div id="next-arrow" class="slide-nav-arrow">
+      <div id="next-arrow" class="slide-nav-arrow" title="Next Slide (&#8594;)">
         <span>&gt;</span>
       </div>
     </div>
