--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
-  <div id="sidebar" class="open">
+  <div id="sidebar">
     <div id="sidebar-list">
       <!-- Slide thumbnails will be dynamically inserted here -->
     </div>
